# safepull

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  safepull.py  setup.py
.github/: dependabot.yml
.github/workflows/: release.yml  tests.yml
src/safepull/: __main__.py  exceptions.py  models.py  safepull.py
tests/: test_models.py  test_safepull.py
