[tool.poetry]
name = "safepull"
version = "2.0.9"
description = "A CLI tool for downloading and extracting packages from PyPI without interfacing with setup.py."
authors = ["Rem <128343390+import-pandas-as-numpy@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
safepull = "safepull.safepull:run"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
rich = "^13.4.2"


[tool.poetry.group.dev.dependencies]
ruff = ">=0.0.278,<0.1.15"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
select = ["ALL"]
ignore = ["ANN101", "ANN206", "ANN102"]
