[tool.poetry]
name = "safepull"
version = "2.2.2"
description = "A CLI tool for downloading and extracting packages from PyPI without interfacing with setup.py."
authors = ["Rem <128343390+import-pandas-as-numpy@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://pypi.org/project/safepull/"
repository = "https://github.com/import-pandas-as-numpy/safepull"

[tool.poetry.scripts]
safepull = "safepull.safepull:run"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
rich = "^13.4.2"
humanize = "^4.9.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.5.0,<0.6.10"
pre-commit = ">=3.3.3,<5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
select = ["ALL"]
ignore = ["ANN101", "ANN206", "ANN102", "S202"]
